--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,49 @@
 /* Скидання стилів */
 * {
     box-sizing: border-box;
-  }
-  a {
-    text-decoration: none;
-    display: block;
-  }
-  ul {
-    list-style-type: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+ul {
+    list-style: none;
     margin: 0;
     padding: 0;
-  }
-  img {
-    display: block;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-  }
+}
 
-  
+img {
+    display: block;
+}
+
+.gallery {
+    margin: 24px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+    max-width: 1128px;
+}
+
+.gallery-link {
+    display: block;
+    width: 360px;
+    height: 200px;
+    overflow: hidden;
+    transition: transform 500ms ease-in-out, box-shadow 500ms ease-in-out;
+    border-radius: 8px; 
+    text-decoration: none;
+}
+
+.gallery-link:hover {
+    transform: scale(1.05);
+}
+
+.gallery-image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
